NoRef solr: numerous fixes in all code (WIP; issues remain)
git-svn-id: svn://data.ilscipio.com/ilscipio/ofbiz_foundation/trunk@17242 55bbc10b-e964-4c8f-a844-a62c6f7d3c80